--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ blinker==1.8.2
 click==8.1.7
 exceptiongroup==1.2.2
 Flask==3.0.3
+greenlet==3.0.3
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
@@ -9,5 +10,7 @@ MarkupSafe==2.1.5
 packaging==24.1
 pluggy==1.5.0
 pytest==8.3.2
+SQLAlchemy==2.0.32
 tomli==2.0.1
+typing_extensions==4.12.2
 Werkzeug==3.0.3
