--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+marshmallow==3.21.3
+marshmallow-sqlalchemy==1.0.0
 packaging==24.1
 pluggy==1.5.0
 pytest==8.3.2
