--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "request": "launch",
             "module": "flask",
             "env": {
-                "FLASK_APP": "main/wsgi.py",
+                "FLASK_APP": "index/wsgi.py",
                 "FLASK_DEBUG": "1"
             },
             "args": [
