--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,21 @@
+APScheduler==3.10.4
 blinker==1.8.2
 click==8.1.7
 exceptiongroup==1.2.2
 Flask==3.0.3
-Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 marshmallow==3.21.3
-marshmallow-sqlalchemy==1.0.0
 packaging==24.1
 pluggy==1.5.0
 pytest==8.3.2
+pytz==2024.1
+six==1.16.0
 SQLAlchemy==2.0.32
 tomli==2.0.1
 typing_extensions==4.12.2
+tzlocal==5.2
 Werkzeug==3.0.3
