--- a/gui/package.json
+++ b/gui/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/n-yam/index#readme",
   "devDependencies": {
+    "html-webpack-plugin": "^5.6.0",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
