--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ blinker==1.8.2
 click==8.1.7
 exceptiongroup==1.2.2
 Flask==3.0.3
+Flask-Cors==4.0.1
 greenlet==3.0.3
 gunicorn==23.0.0
 iniconfig==2.0.0
